apps/samba/k8s.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: samba
  namespace: media
  annotations:
    argocd.argoproj.io/sync-wave: "30"
  labels:
    app.kubernetes.io/name: samba
spec:
  type: ClusterIP
  externalIPs:
    - 192.168.1.45
  ports:
    - port: 445
      targetPort: 445
      protocol: TCP
      name: smtp
  selector:
    app.kubernetes.io/name: samba
